--- a/AIRBOX/css/style.css
+++ b/AIRBOX/css/style.css
@@ -35,11 +35,13 @@ header {
     text-decoration: none;
     flex-wrap: wrap;
     gap: 5px;
+    justify-content: space-around;
+    
 }
 
 .topBarNav ul li {
     list-style-type: none;
-    margin: 2px;
+    margin: 3px;
 }
 
 .topBarNav ul li a {
@@ -51,8 +53,7 @@ header {
 .topBarNav ul li a:hover {
     color: #ffffff;
     background-color: #3a3a52;
-    border-radius: 5px;
-    padding: 5px;
+    border-radius: 3px;
 }
 
 .secondRowTopText {
@@ -61,6 +62,8 @@ header {
     flex-direction: column;
     margin-top: 15px;
 }
+
+/* START OF SECOND ROW */
 
 .secondRow h2 {
     color: #d1d0d6; 
@@ -106,44 +109,67 @@ header {
    color: #5d647d;
 }
 
+/* START OF THIRD ROW */
 
-
-
-
-
-/* header {
-    background-color: #262336;
-}
-
-.headerNav {
+.thirdRow {
     display: flex;
-    float: right;
-}
-
-.headerNav ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    color: #68647d;
-}
-
-.headerNav a {
-    display: flex;
-    color: #68647d;
-    text-decoration: none;
-    font-size: small;
-}
-
-.headerNav li {
-    display: flex;
-    text-decoration: none;
+    flex-direction: row;
     flex-wrap: wrap;
-    flex: 1;
-    
+    background-color: #f29b66;
+    padding: 20px;
+    padding-bottom: 60px;
 }
 
-.headerLogo {
+.controlPanel {
     display: flex;
-    width: 20%;
-} */
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;   
+}
+
+
+
+.multiDomain {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.ftp {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.directSupport {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.thirdRow h4 {
+    color: #dddce1;
+    margin: .01em;
+}
+
+.thirdRow h3 {
+    color: #ffffff;
+    font-size: x-large;
+    margin: .01em;
+}
+
+.thirdRow p {
+    text-align: center;
+    margin: .01em;
+}
